--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -62,7 +62,7 @@ endif::[]
 *** xref:pubcloud-setup.adoc[Public Cloud Setup]
 *** xref:webui-setup.adoc[Web Interface Setup]
 *** xref:setup-wizard.adoc[Setup Wizard]
-*** xref:setup-payg.adoc[Setup {payg}]
+*** xref:connect-payg.adoc[Connect {payg}]
 // Upgrade GUIDE
 ** xref:upgrade-intro.adoc[Upgrade]
 ifeval::[{suma-content} == true]
