--- a/modules/specialized-guides/pages/qs-publiccloud/clients.adoc
+++ b/modules/specialized-guides/pages/qs-publiccloud/clients.adoc
@@ -5,7 +5,7 @@ When you have your {productname} Server set up, you are ready to start registeri
 
 For instructions on registering clients on a public cloud, see xref:client-configuration:clients-pubcloud.adoc[]
 
-For instructions on setting up {payg} instances, see xref:installation-and-upgrade:setup-payg.adoc[]
+For instructions on connecting {payg} instances, see xref:installation-and-upgrade:connect-payg.adoc[]
 
 
 
