--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -1,19 +1,17 @@
 [[connect.payg.instances]]
-= Connect {payg}
+= Connect {payg} instance
 
 In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 
-* provides customized Pay-as-you-go-specific product images (eg. SLES, SLES for SAP...)
+* provides customized {payg} product images (eg. SLES, SLES for SAP...)
 * operates per-region RMT Servers mirroring repositories for products available as {payg}
 
-//{payg} instances are registered to the closest RMT Server at launch time (region/Server name is auto-determined).
-
-This document describes how to connect existing {payg} instance to {productname} server, and instance status refreshing.
+This document describes how to connect existing {payg} instance to {productname} server, and gives basic information about instance statuses.
 
 Before using {payg} feature make sure that: 
-* {productname} server needs to be deployed in the same region as the {payg} instance
-* enter valid {scc} credentials in [guimenu]``Admin > Setup Wizard > Organization Credentials``, even they provides limited access to products
 
+* {productname} server is deployed in the same region as the {payg} instance
+* valid {scc} credentials iare entered in [guimenu]``Admin > Setup Wizard > Organization Credentials``, even they provide only limited access to products
 
 
 == Connecting {payg} instance
@@ -50,10 +48,10 @@ Otherwise, continue with <<proc-finishing-payg-connecting>>.
 . In the menu:Add new {payg} data[Bastion Key], add bastion key
 . In the menu:Add new {payg} data[Bastion Key Password], add bastion key password
 
-Complete the setup process with with <<proc-finishing-payg-setting-up>>.
+Complete the setup process with with <<proc-finishing-payg-connecting>>.
 
 [[proc-finishing-payg-connecting]]
-.Procedure: Finishing {payg} conencting
+.Procedure: Finishing {payg} connecting
 [role=procedure]
 . Click btn:[Create] to complete adding new {payg} connection data
 . You will return to [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
@@ -68,13 +66,13 @@ If the invalid data are entered at any point, the newly created instance will be
 As soon as the authentication data is available on the server, a list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-E.g. if the instance has {sle} 15 SP1 product installed, {sle}15 SP2 and {sle}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
+E.g. if the instance has {slsa}15 SP1 product installed, {slsa}15 SP2 and {slsa}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
 Once the products are shown as available, they need to be scheduled for syncing by selecting the checkbox next to the product name and clicking btn:[Add product].
 
 To monitor the progress of channel syncing in GUI, go to [guimenu]``Software > Channel List > All``. 
 
-To monitor the syncing progress in the log files, go to /var/log/rhn/reposync directory on the {productiname} server.
+To monitor the syncing progress in the log files, go to /var/log/rhn/reposync directory on the {productname} server.
 
 
 === Deleting the instance
@@ -94,7 +92,7 @@ The following procedure describes how to delete the instance.
 
 == Instance status and availability  
 
-{productname} server uses instance credentails to connect to the RMT server and download the packages using reposync.
+{productname} server uses instance credentails to connect to the RMT server and to download the packages using reposync.
 These credentials are refreshed every 10 minutes by taskomatic, which always uses the last known authentication credentials to access the instance.
 
 Up-to date status of the {payg} instance is shown in the column Status or on the instance details page.
@@ -104,10 +102,10 @@ When the instance is not reachable, the reposync will fail.
 To delete the instance, use <<proc-deleting-payg-instance>>. 
  
 
-There {payg} instance may not be accessible from the {productname} at all times.
+{payg} instance may not be accessible from the {productname} server at all times.
 
-. If the instance exists, but is stopped, the last known credentials will be used to try to connect to that instance. 
-    The duration of availability of these credentials will vary depending on the cloud provider.
+. If the instance exists, but is stopped, the last known credentials will be used to try to connect to the instance. 
+    How long the credentials remain available depends on the cloud provider.
 
 . If the instance no longer exists, but is still registered with SUMA, its credentials are no longer valid and the authentication will fail.
     The error message is shown in the column Status. 
