renamed cookbook, common workflows

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -1,15 +1,15 @@
-// Cookbook Antora Navigation List
+// Common Workflows Antora Navigation List
 
-// PDF Cookbook
+// PDF Common Workflows
 ifdef::backend-pdf[]
-= [.title]#{productname} {productnumber}#: Cookbook
+= [.title]#{productname} {productnumber}#: Common Workflows
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
 endif::[]
 
 
-* xref:cookbook-overview.adoc[Cookbook]
+* xref:cw-overview.adoc[Common Workflows]
 ** xref:recipe-onboarding.adoc[Onboarding]
 ** xref:recipe-clm.adoc[Content Lifecycle Management]
 ** xref:recipe-configmgmt.adoc[Configuration Management]
