small fix for specialized guides typo

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -1,8 +1,8 @@
-// Cookbook Antora Navigation List
+// Specialized Guides Antora Navigation List
 
-// PDF Cookbook
+// PDF Specialized Guides
 ifdef::backend-pdf[]
-= [.title]#{productname} {productnumber}#: Cookbook
+= [.title]#{productname} {productnumber}#: Specialized Guides
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
 :doctype: book
