--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -79,6 +79,7 @@ endif::[]
 // Troubleshooting - always keep as the last chapter
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
+*** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
 *** xref:tshoot-firewalls.adoc[Troubleshooting Firewalls]
 *** xref:tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
