--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -1,5 +1,5 @@
 [[troubleshooting-customchannel]]
-= Creating Custom Channel without Conflicting Packages
+= Troubleshooting Custom Channel without Conflicting Packages
 
 ////
 PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
