--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -1,5 +1,5 @@
 [[troubleshooting-customchannel]]
-= Troubleshooting Custom Channel without Conflicting Packages
+= Troubleshooting Custom Channel with Conflicting Packages
 
 ////
 PUT THIS COMMENT AT THE TOP OF TROUBLESHOOTING SECTIONS
@@ -49,9 +49,9 @@ avoid the issue:
 .Procedure: Avoiding Conflicting Packages in Custom Channels
 
 . Remove the custom channel as a child channel from parent channel.
-  For more information, see xref:administration:custom-channels#_manage_custom_channels[].
+  For more information, see xref:administration:custom-channels.adoc#_manage_custom_channels[].
 . Create the custom channel in a separate tree.
-  For more information, see xref:administration:custom-channels#_creating_custom_channels_and_repositories[].
+  For more information, see xref:administration:custom-channels.adoc#_creating_custom_channels_and_repositories[].
 . To get the custom channel as a child channel within
 Content Lifecycle Management (CLM):
 +
@@ -64,9 +64,9 @@ Content Lifecycle Management (CLM):
   This creates an environment with vendor and custom channels that can be associated with an activation key and used to bootstrap the client.
 . Important note: In the CLM project, it is recommend to add a filter, which excludes the problematic or conflicting packages.
   Otherwise the conflicting packages with higher version numbers would be installed during the update of the client.
-  For more information about filtering, see xref:administration:content-lifecycle-examples#exclude-higher-kernel-version[].
+  For more information about filtering, see xref:administration:content-lifecycle-examples.adoc#exclude-higher-kernel-version[].
 . To get the latest patches into the CLM environment (with vendor and custom channel), click the btn:[Build] button in the project.
   This is needed to re-built the environment.
 
-* For more information about CLM, see xref:administration:content-lifecycle[].
+* For more information about CLM, see xref:administration:content-lifecycle.adoc[].
 * For another workaround, see https://www.suse.com/releasenotes/x86_64/SUSE-MANAGER/4.2/index.html#_epel_and_salt_packages.
