--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -3,7 +3,7 @@
 
 In the three major public cloud providers (AWS, GCP and Azure), SUSE:
 
-* provides customized {payg} product images (eg. SLES, SLES for SAP...)
+* provides customized {payg} product images for SLES, SLES for SAP, etc.
 * operates per-region RMT Servers mirroring repositories for products available as {payg}
 
 This document describes how to connect existing {payg} instance to {productname} server, and gives basic information about instance statuses.
