--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -11,7 +11,7 @@ This document describes how to connect existing {payg} instance to {productname}
 Before using {payg} feature make sure that: 
 
 * {productname} server is deployed in the same region as the {payg} instance
-* valid {scc} credentials iare entered in [guimenu]``Admin > Setup Wizard > Organization Credentials``, even they provide only limited access to products
+* valid {scc} credentials are entered in menu:Admin[Setup Wizard > Organization Credentials], even they provide only limited access to products
 
 
 == Connecting {payg} instance
