--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -25,9 +25,9 @@ Before using {payg} feature make sure that:
 . In the menu:Add new {payg} data[Hostname], enter the actual name of the instance as it appears on the cloud.
 . In the menu:Add new {payg} data[Port], enter 22.
 . In the menu:Add new {payg} data[Username], add the actual username as specified in the cloud.
-. In the menu:Add new {payg} data[Password], enter the password
-. In the menu:Add new {payg} data[Key], add the correct instance key
-. In the menu:Add new {payg} data[Key Password], add key passphrase
+. In the menu:Add new {payg} data[Password], enter the password.
+. In the menu:Add new {payg} data[Key], add the correct instance key.
+. In the menu:Add new {payg} data[Key Password], add key passphrase.
 
 [IMPORTANT]
 ====
