--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -41,12 +41,12 @@ Otherwise, continue with <<proc-finishing-payg-connecting>>.
 [[proc-adding-ssh-bastion-connection-data]]
 .Procedure: Adding SSH bastion connection data
 [role=procedure]
-. In the menu:Add new {payg} data[Bastion Hostame], add the bastion hostname
-. In the menu:Add new {payg} data[Bastion Port], add the bastion port number
-. In the menu:Add new {payg} data[Bastion Username], add bastion the username
-. In the menu:Add new {payg} data[Bastion Password], add bastion password
-. In the menu:Add new {payg} data[Bastion Key], add bastion key
-. In the menu:Add new {payg} data[Bastion Key Password], add bastion key password
+. In the menu:Add new {payg} data[Bastion Hostame], add the bastion hostname.
+. In the menu:Add new {payg} data[Bastion Port], add the bastion port number.
+. In the menu:Add new {payg} data[Bastion Username], add bastion the username.
+. In the menu:Add new {payg} data[Bastion Password], add bastion password.
+. In the menu:Add new {payg} data[Bastion Key], add bastion key.
+. In the menu:Add new {payg} data[Bastion Key Password], add bastion key password.
 
 Complete the setup process with with <<proc-finishing-payg-connecting>>.
 
