--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -66,7 +66,7 @@ If the invalid data are entered at any point, the newly created instance will be
 As soon as the authentication data is available on the server, a list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-E.g. if the instance has {slsa}15 SP1 product installed, {slsa}15 SP2 and {slsa}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
+For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
 Once the products are shown as available, they need to be scheduled for syncing by selecting the checkbox next to the product name and clicking btn:[Add product].
 
