--- a/modules/specialized-guides/pages/qs-publiccloud/clients.adoc
+++ b/modules/specialized-guides/pages/qs-publiccloud/clients.adoc
@@ -3,9 +3,9 @@
 
 When you have your {productname} Server set up, you are ready to start registering clients.
 
-For instructions on registering clients on a public cloud, see xref:client-configuration:clients-pubcloud.adoc[]
+For instructions on registering clients on a public cloud, see xref:client-configuration:clients-pubcloud.adoc[].
 
-For instructions on connecting {payg} instances, see xref:installation-and-upgrade:connect-payg.adoc[]
+For instructions on connecting {payg} instances, see xref:installation-and-upgrade:connect-payg.adoc[].
 
 
 
