--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -20,7 +20,7 @@ Before using {payg} feature make sure that:
 .Procedure: Conencting new {payg}  instance
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
-. In the new screen, click btn:[Create] to add new {payg} connection data
+. In the new screen, click btn:[Create] to add new {payg} connection data.
 . In the menu:Add new {payg} data[Description], add the description of the newly created connection.
 . In the menu:Add new {payg} data[Hostname], enter the actual name of the instance as it appears on the cloud.
 . In the menu:Add new {payg} data[Port], enter 22.
