--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -70,7 +70,7 @@ For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa
 
 Once the products are shown as available, they need to be scheduled for syncing by selecting the checkbox next to the product name and clicking btn:[Add product].
 
-To monitor the progress of channel syncing in GUI, go to [guimenu]``Software > Channel List > All``. 
+To monitor the progress of channel syncing in the {webui}, navigate to [guimenu]``Software > Channel List > All``. 
 
 To monitor the syncing progress, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
 
