--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -99,7 +99,7 @@ Up-to date status of the {payg} instance is shown in the column Status or on the
 When the instance is not reachable, the reposync will fail.
 
 {payg} instance remains connected to {productname} server unless it is explicitly deleted.
-To delete the instance, use <<proc-deleting-payg-instance>>. 
+To delete the instance connection data, use <<proc-deleting-payg-instance>>. 
  
 
 {payg} instance may not be accessible from the {productname} server at all times.
