--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -93,7 +93,7 @@ The following procedure describes how to delete the instance.
 == Instance status and availability  
 
 {productname} server uses instance credentails to connect to the RMT server and to download the packages using reposync.
-These credentials are refreshed every 10 minutes by taskomatic, which always uses the last known authentication credentials to access the instance.
+These credentials are refreshed every 10 minutes by taskomatic using the defined ssh connection data. Connection to RMT server always uses the last known authentication credentials collected from the payg instance.
 
 Up-to date status of the {payg} instance is shown in the column Status or on the instance details page.
 When the instance is not reachable, the reposync will fail.
