--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -90,7 +90,7 @@ The following procedure describes how to delete the instance.
 
 
 
-== Instance status and availability  
+== Instance credential collect status
 
 {productname} server uses instance credentails to connect to the RMT server and to download the packages using reposync.
 These credentials are refreshed every 10 minutes by taskomatic using the defined ssh connection data. Connection to RMT server always uses the last known authentication credentials collected from the payg instance.
