--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -77,7 +77,7 @@ To monitor the syncing progress, check the log files in the [path]``/var/log/rhn
 
 === Deleting the instance
 
-The following procedure describes how to delete the instance.
+The following procedure describes how to delete ssh connection data to the instance.
 
 [[proc-deleting-payg-instance]]
 .Procedure: Deleting {payg} instance
