--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -72,7 +72,7 @@ Once the products are shown as available, they need to be scheduled for syncing 
 
 To monitor the progress of channel syncing in the {webui}, navigate to [guimenu]``Software > Channel List > All``. 
 
-To monitor the syncing progress, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
+To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
 
 
 === Deleting the instance
