--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -68,7 +68,7 @@ As soon as the authentication data is available on the server, a list of availab
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
 For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
-Once the products are shown as available, they need to be scheduled for syncing by selecting the checkbox next to the product name and clicking btn:[Add product].
+Once the products are shown as available, the user can add a product to {productname} by selecting the checkbox next to the product name and clicking btn:[Add product].
 
 To monitor the progress of channel syncing in the {webui}, navigate to [guimenu]``Software > Channel List > All``. 
 
