--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -53,7 +53,7 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 [[proc-finishing-payg-connecting]]
 .Procedure: Finishing {payg} connecting
 [role=procedure]
-. Click btn:[Create] to complete adding new {payg} connection data
+. To complete adding new {payg} connection data, click btn:[Create].
 . You will return to [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
 . If the authentication data for the instance are correct, the column Status will soon show "Credentials successfully updated".
 
