--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -21,7 +21,6 @@ Before using {payg} feature make sure that:
 .Procedure: Connecting new {payg}  instance
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
-. In the new screen, click btn:[Create] to add new {payg} connection data.
 . In the menu:Add new {payg} data[Description], add the description of the newly created connection.
 . In the menu:Add new {payg} data[Hostname], enter the instance DNS or IP address to connect from {productname}.
 . In the menu:Add new {payg} data[Port], enter 22.
@@ -29,6 +28,7 @@ Before using {payg} feature make sure that:
 . In the menu:Add new {payg} data[Password], enter the password.
 . In the menu:Add new {payg} data[Key], add the correct instance key.
 . In the menu:Add new {payg} data[Key Password], add key passphrase.
+. Click btn:[Create] to add new {payg} connection data.
 
 [IMPORTANT]
 ====
