--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -21,7 +21,7 @@ Before using {payg} feature make sure that:
 .Procedure: Connecting new {payg}  instance
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
-. In the menu:Add new {payg} data[Description], add the description of the newly created connection.
+. In the menu:Add new {payg} data[Description], add the description.
 . In the menu:Add new {payg} data[Hostname], enter the instance DNS or IP address to connect from {productname}.
 . In the menu:Add new {payg} data[Port], enter 22.
 . In the menu:Add new {payg} data[Username], add the actual username as specified in the cloud.
