--- a/modules/administration/pages/tshoot-custom-channel.adoc
+++ b/modules/administration/pages/tshoot-custom-channel.adoc
@@ -33,7 +33,7 @@ included into the bootstrap repository.
 Such packages (for example, [package]``python3-zmq`` or [package]``zeromq``) may corrupt the creation of the bootstrap repository or cause issues during bootstrap of the client.
 
 When the custom channel (for example, an EPEL channel) is added below the parent vendor channel, issues with conflicting packages can not be solved directly.
-The way how to solve this is to separate the custom channel from the parent channel.
+The way how to solve this is to separate the custom channel from the vendor channel.
 The custom channel needs to be created in a separate tree.
 In case that the custom channel needs to be delivered
 as a child, such environemnt can be created using Content Lifecycle Management (CLM).
