Corrected procedure instruction.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -76,12 +76,12 @@ To monitor the progress of channel syncing in the {webui}, navigate to [guimenu]
 To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
 
 
-=== Deleting the instance
+=== Deleting the instance connection data
 
 The following procedure describes how to delete SSH connection data to the instance.
 
 [[proc-deleting-connection-data-to-instance]]
-.Procedure: Deleting conenction data to instance
+.Procedure: Deleting connection data to instance
 [role=procedure]
 . Go to [guimenu]``Admin > Setup Wizard > {payg}``
 . Find the instance on the list of existing instances
