Further changes based on new field names.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -18,17 +18,18 @@ Before using {payg} feature make sure that:
 == Connecting {payg} instance
 
 [[proc-connecting-new-payg]]
-.Procedure: Connecting new {payg}  instance
+.Procedure: Connecting new {payg} instance
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
+. Start with the page section "{payg} connection Description".
 . In the menu:Add new {payg} data[Description], add the description.
-. In the menu:Add new {payg} data[Hostname], enter the instance DNS or IP address to connect from {productname}.
-. In the menu:Add new {payg} data[Port], enter 22.
-. In the menu:Add new {payg} data[Username], add the actual username as specified in the cloud.
+. Move to the page section "Instance SSH conenction data".
+. In the menu:Add new {payg} data[Host], enter the instance DNS or IP address to connect from {productname}.
+. In the menu:Add new {payg} data[SSH Port], enter the port number or use default value 22.
+. In the menu:Add new {payg} data[User], enter the username as specified in the cloud.
 . In the menu:Add new {payg} data[Password], enter the password.
-. In the menu:Add new {payg} data[Key], add the correct instance key.
-. In the menu:Add new {payg} data[Key Password], add key passphrase.
-. Click btn:[Create] to add new {payg} connection data.
+. In the menu:Add new {payg} data[SSH Private Key], enter the instance key.
+. In the menu:Add new {payg} data[SSH Private Key Passphrase], enter the key passphrase.
 
 [IMPORTANT]
 ====
@@ -42,12 +43,13 @@ Otherwise, continue with <<proc-finishing-payg-connecting>>.
 [[proc-adding-ssh-bastion-connection-data]]
 .Procedure: Adding SSH bastion connection data
 [role=procedure]
-. In the menu:Add new {payg} data[Bastion Hostame], add the bastion hostname.
-. In the menu:Add new {payg} data[Bastion Port], add the bastion port number.
-. In the menu:Add new {payg} data[Bastion Username], add bastion the username.
-. In the menu:Add new {payg} data[Bastion Password], add bastion password.
-. In the menu:Add new {payg} data[Bastion Key], add bastion key.
-. In the menu:Add new {payg} data[Bastion Key Password], add bastion key password.
+. Go to the page section "Bastion SSH connection data".
+. In the menu:Add new {payg} data[Host], enter the bastion hostname.
+. In the menu:Add new {payg} data[SSH Port], enter the bastion port number.
+. In the menu:Add new {payg} data[User], enter the bastion username.
+. In the menu:Add new {payg} data[Password], enter the bastion password.
+. In the menu:Add new {payg} data[SSH Private Key], enter the bastion key.
+. In the menu:Add new {payg} data[SSH Private Key Passphrase], enter the bastion key passphrase.
 
 Complete the setup process with with <<proc-finishing-payg-connecting>>.
 
