--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -57,7 +57,8 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 .Procedure: Finishing {payg} connecting
 [role=procedure]
 . To complete adding new {payg} connection data, click btn:[Create].
-. You will return to [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
+. You will return to {payg} connection data Details page. The update connection status will be displayed on the top section named "Information".
+. You can also see the connection status in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
 . If the authentication data for the instance are correct, the column Status will soon show "Credentials successfully updated".
 
 [IMPORTANT]
@@ -73,14 +74,14 @@ For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa
 
 Once the products are shown as available, the user can add a product to {productname} by selecting the checkbox next to the product name and clicking btn:[Add product].
 
-To monitor the progress of channel syncing in the {webui}, navigate to [guimenu]``Software > Channel List > All``. 
+After the success message you can verify the newly added channels in the {webui}, by navigating to [guimenu]``Software > Channel List > All``. 
 
 To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
 
 
 === Deleting the instance connection data
 
-The following procedure describes how to delete SSH connection data to the instance.
+The following procedure describes how to delete SSH connection data of the instance.
 
 [[proc-deleting-connection-data-to-instance]]
 .Procedure: Deleting connection data to instance
