Minor formatting changes.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -57,20 +57,21 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 .Procedure: Finishing {payg} connecting
 [role=procedure]
 . To complete adding new {payg} connection data, click btn:[Create].
-. You will return to {payg} connection data Details page. The update connection status will be displayed on the top section named "Information".
-. You can also see the connection status in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen.
-. If the authentication data for the instance are correct, the column Status will soon show "Credentials successfully updated".
+. Return to {payg} connection data Details page is displayed. 
+    The updated connection status is displayed on the top section named "Information".
+. Connection status is shown in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen too.
+. If the authentication data for the instance are correct, the column Status shows "Credentials successfully updated".
 
 [IMPORTANT]
 ====
-If the invalid data are entered at any point, the newly created instance will be shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column Status displaying error message.
+If the invalid data are entered at any point, the newly created instance is shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column Status displaying error message.
 ====
 
 
 As soon as the authentication data is available on the server, a list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 will be automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
+For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 are automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
 Once the products are shown as available, the user can add a product to {productname} by selecting the checkbox next to the product name and clicking btn:[Add product].
 
@@ -90,7 +91,8 @@ The following procedure describes how to delete SSH connection data of the insta
 . Find the instance on the list of existing instances
 . Click on the instance details
 . Select btn:[Delete] and confirm your selection
-. You will be returned to the list of instances and the one that was just deleted will no longer be shown
+. You are returned to the list of instances. 
+    The one that was just deleted is no longer shown.
 
 
 
