--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -21,9 +21,9 @@ Before using {payg} feature make sure that:
 .Procedure: Connecting new {payg} instance
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
-. Start with the page section "{payg} connection Description".
+. Start with the page section [guimenu]``{payg} connection Description``.
 . In the menu:Add new {payg} data[Description], add the description.
-. Move to the page section "Instance SSH conenction data".
+. Move to the page section [guimenu]``Instance SSH connection data``.
 . In the menu:Add new {payg} data[Host], enter the instance DNS or IP address to connect from {productname}.
 . In the menu:Add new {payg} data[SSH Port], enter the port number or use default value 22.
 . In the menu:Add new {payg} data[User], enter the username as specified in the cloud.
@@ -43,7 +43,7 @@ Otherwise, continue with <<proc-finishing-payg-connecting>>.
 [[proc-adding-ssh-bastion-connection-data]]
 .Procedure: Adding SSH bastion connection data
 [role=procedure]
-. Go to the page section "Bastion SSH connection data".
+. Navigate to the page section [guimenu]``Bastion SSH connection data``.
 . In the menu:Add new {payg} data[Host], enter the bastion hostname.
 . In the menu:Add new {payg} data[SSH Port], enter the bastion port number.
 . In the menu:Add new {payg} data[User], enter the bastion username.
@@ -58,13 +58,13 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 [role=procedure]
 . To complete adding new {payg} connection data, click btn:[Create].
 . Return to {payg} connection data Details page is displayed. 
-    The updated connection status is displayed on the top section named "Information".
+    The updated connection status is displayed on the top section named [guimenu]``Information``.
 . Connection status is shown in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen too.
-. If the authentication data for the instance are correct, the column Status shows "Credentials successfully updated".
+. If the authentication data for the instance are correct, the column [guimenu]``Status`` shows "Credentials successfully updated".
 
 [IMPORTANT]
 ====
-If the invalid data are entered at any point, the newly created instance is shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column Status displaying error message.
+If the invalid data are entered at any point, the newly created instance is shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column i[guimenu]``Status`` displaying error message.
 ====
 
 
@@ -87,7 +87,7 @@ The following procedure describes how to delete SSH connection data of the insta
 [[proc-deleting-connection-data-to-instance]]
 .Procedure: Deleting connection data to instance
 [role=procedure]
-. Go to [guimenu]``Admin > Setup Wizard > {payg}``
+. Open [guimenu]``Admin > Setup Wizard > {payg}``
 . Find the instance on the list of existing instances
 . Click on the instance details
 . Select btn:[Delete] and confirm your selection
