Minor formatting changes.

--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -22,14 +22,14 @@ Before using {payg} feature make sure that:
 [role=procedure]
 . In the {productname} {webui}, navigate  to menu:Admin[Setup Wizard > {payg}], and click btn:[Add {payg}].
 . Start with the page section [guimenu]``{payg} connection Description``.
-. In the menu:Add new {payg} data[Description], add the description.
+. In the [guimenu]``Description`` field, add the description.
 . Move to the page section [guimenu]``Instance SSH connection data``.
-. In the menu:Add new {payg} data[Host], enter the instance DNS or IP address to connect from {productname}.
-. In the menu:Add new {payg} data[SSH Port], enter the port number or use default value 22.
-. In the menu:Add new {payg} data[User], enter the username as specified in the cloud.
-. In the menu:Add new {payg} data[Password], enter the password.
-. In the menu:Add new {payg} data[SSH Private Key], enter the instance key.
-. In the menu:Add new {payg} data[SSH Private Key Passphrase], enter the key passphrase.
+. In the [guimenu]``Host`` field, enter the instance DNS or IP address to connect from {productname}.
+. In the [guimenu]``SSH Port`` field, enter the port number or use default value 22.
+. In the [guimenu]``User`` field, enter the username as specified in the cloud.
+. In the [guimenu]``Password`` field, enter the password.
+. In the [guimenu]``SSH Private Key`` field, enter the instance key.
+. In the [guimenu]``SSH Private Key Passphrase`` field, enter the key passphrase.
 
 [IMPORTANT]
 ====
@@ -44,12 +44,12 @@ Otherwise, continue with <<proc-finishing-payg-connecting>>.
 .Procedure: Adding SSH bastion connection data
 [role=procedure]
 . Navigate to the page section [guimenu]``Bastion SSH connection data``.
-. In the menu:Add new {payg} data[Host], enter the bastion hostname.
-. In the menu:Add new {payg} data[SSH Port], enter the bastion port number.
-. In the menu:Add new {payg} data[User], enter the bastion username.
-. In the menu:Add new {payg} data[Password], enter the bastion password.
-. In the menu:Add new {payg} data[SSH Private Key], enter the bastion key.
-. In the menu:Add new {payg} data[SSH Private Key Passphrase], enter the bastion key passphrase.
+. In the [guimenu]``Host`` field, enter the bastion hostname.
+. In the [guimenu]``SSH Port`` field, enter the bastion port number.
+. In the [guimenu]``User`` field, enter the bastion username.
+. In the [guimenu]``Password`` field, enter the bastion password.
+. In the [guimenu]``SSH Private Key`` field, enter the bastion key.
+. In the [guimenu]``SSH Private Key Passphrase`` field, enter the bastion key passphrase.
 
 Complete the setup process with with <<proc-finishing-payg-connecting>>.
 
@@ -57,7 +57,7 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 .Procedure: Finishing {payg} connecting
 [role=procedure]
 . To complete adding new {payg} connection data, click btn:[Create].
-. Return to {payg} connection data Details page is displayed. 
+. Return to {payg} connection data [guimenu]``Details`` page. 
     The updated connection status is displayed on the top section named [guimenu]``Information``.
 . Connection status is shown in [guimenu]``Admin > Setup Wizard > Pay-as-you-go`` screen too.
 . If the authentication data for the instance are correct, the column [guimenu]``Status`` shows "Credentials successfully updated".
@@ -87,10 +87,10 @@ The following procedure describes how to delete SSH connection data of the insta
 [[proc-deleting-connection-data-to-instance]]
 .Procedure: Deleting connection data to instance
 [role=procedure]
-. Open [guimenu]``Admin > Setup Wizard > {payg}``
-. Find the instance on the list of existing instances
-. Click on the instance details
-. Select btn:[Delete] and confirm your selection
+. Open [guimenu]``Admin > Setup Wizard > {payg}``.
+. Find the instance on the list of existing instances.
+. Click on the instance details.
+. Select btn:[Delete] and confirm your selection.
 . You are returned to the list of instances. 
     The one that was just deleted is no longer shown.
 
