--- a/modules/common-workflows/pages/cw-overview.adoc
+++ b/modules/common-workflows/pages/cw-overview.adoc
@@ -7,4 +7,4 @@ The {productname} Cookbook covers all the essential workflows you need to instal
 Each recipe in this book has a clear goal, and provides detailed steps to achieve that goal.
 It is designed to help you better understand both routine and advanced tasks, by explaining what you are achieving in each step, and the various options available to you along the way.
 //OM 2022-01-13: testing
-Each routine will be decribed as xref:cookbook:recipe1.adoc[].
+Each routine will be decribed as xref:snippets:recipe1.adoc[].
