--- a/README.adoc
+++ b/README.adoc
@@ -63,8 +63,8 @@ image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_en_
 image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_zh_cn/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
 image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ko_kr/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
 image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_ja_jp/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_cs_cz/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
-image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_es_es/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_cs_cz/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
+//image:https://github.com/uyuni-project/uyuni-docs/workflows/translation_test_es_es/badge.svg?branch=master["Build Status", link="https://github.com/uyuni-project/uyuni-docs"]
 
 
 
