--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -36,7 +36,7 @@ Before using {payg} feature make sure that:
 Authentication keys must always be in PEM format.
 ====
 
-If you are not connecting directly to the cloud, but via SSH bastion, proceed with <<proc-adding-ssh-bastion-connection-data>>.
+If you are not connecting directly to the instance, but via SSH bastion, proceed with <<proc-adding-ssh-bastion-connection-data>>.
 
 Otherwise, continue with <<proc-finishing-payg-connecting>>.
 
