--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -68,7 +68,7 @@ If the invalid data are entered at any point, the newly created instance is show
 ====
 
 
-As soon as the authentication data is available on the server, a list of available products is updated.
+As soon as the authentication data is available on the server, the list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
 For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2 and {slsa}{nbsp}15 SP3 are automatically added and shown in [guimenu]``Admin > Setup Wizard > Products``. 
