--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -98,7 +98,7 @@ The following procedure describes how to delete SSH connection data of the insta
 
 == Instance credential collect status
 
-{productname} server uses instance credentails to connect to the RMT server and to download the packages using reposync.
+{productname} server uses credentails collected from the instance to connect to the RMT server and to download the packages using reposync.
 These credentials are refreshed every 10 minutes by taskomatic using the defined SSH connection data. Connection to RMT server always uses the last known authentication credentials collected from the {payg} instance.
 
 Up-to date status of the {payg} instance is shown in the column Status or on the instance details page.
