--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -104,7 +104,7 @@ These credentials are refreshed every 10 minutes by taskomatic using the defined
 Up-to date status of the {payg} instance is shown in the column Status or on the instance details page.
 When the instance is not reachable, the credential update process will fail.
 
-{payg} instance remains connected to {productname} server unless it is explicitly deleted.
+{payg} instance remains connected to {productname} server unless ssh connection data is explicitly deleted.
 To delete the SSH connection datato the instance, use <<proc-deleting-connection-data-to-instance>>. 
  
 
