--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -77,7 +77,7 @@ Once the products are shown as available, the user can add a product to {product
 
 After the success message you can verify the newly added channels in the {webui}, by navigating to [guimenu]``Software > Channel List > All``. 
 
-To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} server.
+To monitor the syncing progress of each channel, check the log files in the [path]``/var/log/rhn/reposync`` directory on the {productname} Server.
 
 
 === Deleting the instance connection data
