--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -64,7 +64,7 @@ Complete the setup process with with <<proc-finishing-payg-connecting>>.
 
 [IMPORTANT]
 ====
-If the invalid data are entered at any point, the newly created instance is shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column i[guimenu]``Status`` displaying error message.
+If the invalid data are entered at any point, the newly created instance is shown in [guimenu]``Admin > Setup Wizard > {payg}``, with column [guimenu]``Status`` displaying error message.
 ====
 
 
