Adding PAYG documentation.

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -62,6 +62,7 @@ endif::[]
 *** xref:pubcloud-setup.adoc[Public Cloud Setup]
 *** xref:webui-setup.adoc[Web Interface Setup]
 *** xref:setup-wizard.adoc[Setup Wizard]
+*** xref:connect-payg.adoc[Connect {payg} instance]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
