--- a/modules/quickstart-public-cloud/pages/clients.adoc
+++ b/modules/quickstart-public-cloud/pages/clients.adoc
@@ -5,6 +5,7 @@ When you have your {productname} Server set up, you are ready to start registeri
 
 For instructions on registering clients on a public cloud, see xref:client-configuration:clients-pubcloud.adoc[]
 
+For instructions on connecting {payg} instances, see xref:installation:connect-payg.adoc[].
 
 
 == More information
